--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.28.2",
+    "formik": "^2.4.6",
+    "fs-extra": "^11.3.0",
     "material-react-table": "^3.2.1",
     "next": "15.2.4",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-google-charts": "^5.2.1"
+    "react-google-charts": "^5.2.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
