Add data deletion from the tables

--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-charts": "^5.2.1",
+    "react-hot-toast": "^2.5.2",
+    "underscore": "^1.13.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/underscore": "^1.13.0",
     "typescript": "^5"
   }
 }
