setup basic authentication with supabase

--- a/package.json
+++ b/package.json
@@ -16,15 +16,24 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^7.28.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.2",
+    "class-variance-authority": "^0.7.1",
     "formik": "^2.4.6",
     "fs-extra": "^11.3.0",
+    "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
     "next": "15.2.4",
     "postgres": "^3.4.5",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "underscore": "^1.13.7",
     "yup": "^1.6.1"
   },
