refactor/feat(config/modal): Add category selector modal and install several uberlike dependencies (eslint, prettier, styled components, base-ui)

--- a/package.json
+++ b/package.json
@@ -20,28 +20,40 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
+    "baseui": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "formik": "^2.4.6",
     "fs-extra": "^11.3.0",
     "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
-    "next": "15.2.4",
+    "next": "^15.5.4",
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
+    "styletron-engine-monolithic": "^1.0.0",
+    "styletron-react": "^6.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "underscore": "^1.13.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/underscore": "^1.13.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-baseui": "^13.0.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "prettier": "^3.6.2",
     "typescript": "^5"
   }
 }
