--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/underscore": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-baseui": "^13.0.0",
