--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "^11.3.0",
     "lucide-react": "^0.525.0",
     "material-react-table": "^3.2.1",
+    "moment": "^2.30.1",
     "next": "^15.5.4",
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
