add first iteration of the category graph

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
     "baseui": "^13.0.0",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "formik": "^2.4.6",
     "fs-extra": "^11.3.0",
@@ -31,6 +32,7 @@
     "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
